--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>娜貝特珮的小世界</title>
-    <link rel="css" href="css/styles/styles.min.css">
+    <link rel="stylesheet" href="css/styles/styles.min.css">
 </head>
 <body>
     <!-- 頁首 -->
